--- a/index.html
+++ b/index.html
@@ -2,8 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <script src="node_modules/eruda/eruda.js"></script>
+    <script src="node_modules/eruda-dom/eruda-dom.js"></script>
+    <script src="node_modules/eruda-timing/eruda-timing.js"></script>
+    <script>
+      eruda.init();
+      eruda.add(erudaDom)
+      eruda.add(erudaTiming)
+    </script>
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- naive-ui 的样式会出现在这里 -->
+    <meta name="naive-ui-style" />
+    <!-- vueuc 的样式会出现在这里 -->
+    <meta name="vueuc-style" />
     <title>Vite App</title>
   </head>
   <body>
